fixtures/valid/01-minimal-rust-cli/input.anatomy
anatomy_version = "0.1"
description = "A minimal markdown-driven static site generator written in Rust.\nReads markdown files from a content directory, applies templates,\noutputs static HTML.\n"

[identity]
fingerprint = "a8fybpg4nh2b5vpw498v"

[identity.stack]
id = "rust"
hash = "a8fyb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "web-publishing"
hash = "2b5vp"

[identity.function]
id = "markdown-to-static-html"
hash = "w498v"

[generated]
at = 2026-05-05T14:22:00.000Z
by = "anatomy-cli@0.0.1"
model = "claude-sonnet-4-6"
schema = "https://anatomy.dev/spec/0.1/schema.json"
